--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -1,1 +1,38 @@
-for smth yet to be added wlqr
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>yString.js | </title>
+    <!-- Styles -->
+    <link rel="stylesheet" href="./style/style.css">
+    <script src="./style/style.js"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
+    <style>
+        .settings {
+            background-color: hsla(27, 88%, 60%);
+            color: white;
+            border-end-end-radius: 100px;
+            border-start-end-radius: 100px;
+            width: 80%;
+        }
+    </style>
+</head>
+<body>
+    <div class="main">
+        <div class="sidebar">
+            <div class="wrapper">
+            <a href="index.html" class="home"> <i class='bx bxs-home'></i>  <span> <b> Home </b> </span></a>
+            <a href="history.html" class="history"> <i class='bx bx-history' ></i>  <span> <b> History </b></span></a>
+            <a href="settings.html" class="settings"> <i class='bx bx-cog' ></i>  <span> <b> Settings</b></span></a>
+            </div>
+        </div>
+
+        <div class="container">
+        </div>
+
+        
+    </div>
+</body>
+</html>
