--- a/frontend/history.html
+++ b/frontend/history.html
@@ -9,15 +9,23 @@
     <script src="./style/style.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
-
+    <style>
+        .history {
+            background-color: hsla(27, 88%, 60%);
+            color: white;
+            border-end-end-radius: 100px;
+            border-start-end-radius: 100px;
+            width: 80%;
+        }
+    </style>
 </head>
 <body>
     <div class="main">
         <div class="sidebar">
             <div class="wrapper">
-            <a href="index.html"> <i class='bx bxs-home'></i>  <span> <b> Home </b> </span></a>
-            <a href="history.html"> <i class='bx bx-history' ></i>  <span> <b> History </b></span></a>
-            <a href="settings.html"> <i class='bx bx-cog' ></i>  <span> <b> Settings</b></span></a>
+            <a href="index.html" class="home"> <i class='bx bxs-home'></i>  <span> <b> Home </b> </span></a>
+            <a href="history.html" class="history"> <i class='bx bx-history' ></i>  <span> <b> History </b></span></a>
+            <a href="settings.html" class="settings"> <i class='bx bx-cog' ></i>  <span> <b> Settings</b></span></a>
             </div>
         </div>
 
@@ -28,3 +36,4 @@
     </div>
 </body>
 </html>
+
